--- a/angular2025-main/test2/src/app/app.component.html
+++ b/angular2025-main/test2/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-  <!-- <app-background></app-background> -->
-  <app-top></app-top>
+   <nav>    
+      <a routerLink="">Фильмы</a>
+      <a routerLink="/films">Мультфильмы</a>
+   </nav>
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
