--- a/angular2025-main/test2/src/app/app.component.scss
+++ b/angular2025-main/test2/src/app/app.component.scss
@@ -3,3 +3,22 @@
     margin: 0 auto;
     width: 100%;
 }
+nav {
+    padding: 24px 0;
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+nav a {
+    font-size: 24px;
+    text-decoration: none;
+    color: #fff;
+    transition: .3s;
+}
+
+@media (any-hover:hover) {
+    nav a:hover {
+        color: rgb(139, 139, 148);
+    }
+}
