--- a/angular2025-main/test2/src/app/films/films.component.html
+++ b/angular2025-main/test2/src/app/films/films.component.html
@@ -8,6 +8,7 @@
 <div class="films">    
     <div class="films__grid">
         <div class="films-item" *ngFor="let movie of movies">
+            <a [routerLink]="['/film', movie.kinopoiskId]">Подробнее </a>
             <div class="films-item__image">
                 <img [src]="movie.posterUrlPreview">
             </div>
