--- a/angular2025-main/test2/src/app/top/top.component.html
+++ b/angular2025-main/test2/src/app/top/top.component.html
@@ -25,15 +25,14 @@
     </select>
     <div class="films__grid">
         <div class="films-item" *ngFor="let movie of filteredMovies">
+            <a [routerLink]="['/film', movie.kinopoiskId]">Подробнее </a>
             <div class="films-item__image">
                 <img [src]="movie.posterUrlPreview">
             </div>
             <div class="films-item__head">
                 <h3 class="films-item__name"> {{movie.nameRu}}</h3>
                 <div class="films-item__year"> {{ movie.year }}</div>
-            </div>
-            <div class="films-item__desc">
-                {{movie.description}}
+                <div class="films-item__rating"> {{ movie.ratingKinopoisk }}</div>
             </div>
             <div class="films-item__genre">
                 {{ movie.genres[0].genre }}
