--- a/test2/src/app/detail-film/detail-film.component.html
+++ b/test2/src/app/detail-film/detail-film.component.html
@@ -13,6 +13,7 @@
         </div>   
         <h3>О фильме </h3>  
         <div class="detail-film__description">{{ movie.description }}</div>
+        <button class="button-play">Смотреть</button>
     </div>
 </div>
 
