--- a/test2/src/app/detail-film/detail-film.component.scss
+++ b/test2/src/app/detail-film/detail-film.component.scss
@@ -6,9 +6,8 @@
 .detail-film__head{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 800px;
-    height: 350px;
+    justify-content: space-around;
+    width: 800px; 
    
 }
 .detail-film__name{
@@ -23,4 +22,14 @@
     width: 400px;
     letter-spacing: 1px;
     color: rgb(139, 139, 148);
+}
+.button-play{
+    background-color: rgb(233, 77, 5);
+    color: wheat;
+    width: 150px;
+    height: 50px;
+    border-radius: 50px;
+}
+.button-play:hover{
+    background-color: rgb(139, 139, 148);
 }
